--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,120 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 236, 233, 226;
+  --background-end-rgb: 236, 233, 226;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 11, 12, 16;
+    --background-end-rgb: 11, 12, 16;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: rgb(var(--foreground-rgb));
+    background: rgb(var(--background-end-rgb));
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
+.kanit-medium {
+    font-family: "Kanit", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.kanit-extrabold {
+    font-family: "Kanit", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+}
+
+.transducer-condensed-black {
+    font-family: "transducer-condensed", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+}
+
+h1{
+    font-size: 6em;
+    font-size: calc(2em + 2vw);
+    font-family: arial,helvetica;
+    margin:0;
+}
+
+.intro p {
+    width: 50%;
+    margin: 0.5em auto;
+    font-size: 1.65em;
+}
+
+.section {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+
+/* Overwriting styles for the navigation dots */
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    background: aqua !important;
+}
+
+.fp-tooltip {
+    color: aqua !important;
+}
+
+.fp-bottom {
+    padding-bottom: 35px;
+    z-index: 2;
+}
+
+/* left-slider-arrow */
+
+/* right-slider-arrow */
+.fp-controlArrow.fp-next {
+    border: none;
+    width: 25px;
+    height: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Uncomment to overwrite the styles of the tooltips too */
+/*
+.fp-tooltip{
+    font-size: 1.2em !important;
+    margin-right: 10px;
+}
+*/
+
+.active-tab {
+    background: #202833 !important;
+    color: aqua !important;
+}
+
+.relative span {
+    color: aqua !important;
+}
+
+.asd {
+}
+
